add the ui for pop up

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,24 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <button id="changeColor"></button>
+    <div class="popup-container">
+      <div class="popup-header">
+        <p>Secure Private Tabs</p>
+      </div>
+      <div class="popup-body">
+        <ul class="popup-body-list">
+          <li>
+            <p>Mark As Private</p>
+          </li>
+          <li>
+            <p>Hide All Private</p>
+          </li>
+          <li>
+            <p>Bring Back Private</p>
+          </li>
+        </ul>
+      </div>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
