--- a/popup.html
+++ b/popup.html
@@ -6,15 +6,15 @@
   <body>
     <div class="popup-container">
       <div class="popup-header">
-        <p>Secure Private Tabs</p>
+        <p>Tab Securer</p>
       </div>
       <div class="popup-body">
         <ul class="popup-body-list">
           <li>
-            <p>Mark As Private</p>
+            <p id="mark-as-private">Mark As Private</p>
           </li>
           <li>
-            <p>Hide All Private</p>
+            <p id="hide-all-private">Hide All Private</p>
           </li>
           <li>
             <p>Bring Back Private</p>
