basic working extension

--- a/pages/suspendedpage.html
+++ b/pages/suspendedpage.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./suspendedpage.css" />
     <title>Document Suspend html</title>
   </head>
   <body>
-    <div id="click-me">Click to reload the page again</div>
+    <div class="suspended-html-container">
+      <h2 class="title">URLSearchParams - Web APIs | MDN</h2>
+
+      <a class="page-url">https://developers.chrome.com/extensions/windows</a>
+
+      <button id="click-me">Show Tab</button>
+    </div>
+    <!-- <div id="click-me">Click to reload the page again</div> -->
     <script src="suspendedpage.js"></script>
   </body>
 </html>
