add the setting functionality

--- a/pages/suspendedpage.html
+++ b/pages/suspendedpage.html
@@ -12,6 +12,11 @@
 
       <a class="page-url">https://developers.chrome.com/extensions/windows</a>
 
+      <img
+        class="giphy"
+        src="https://media.giphy.com/media/wpoLqr5FT1sY0/giphy.gif"
+        alt=""
+      />
       <button id="click-me">Show Tab</button>
     </div>
     <!-- <div id="click-me">Click to reload the page again</div> -->
