--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,15 @@
       <div class="popup-header">
         <p>Tab Securer</p>
       </div>
+      <div class="info-section">
+        <div class="left-section">
+          <span>Private Tabs Open</span>
+          <span>4</span>
+        </div>
+        <div class="right-section">
+          <span> Secured Tabs </span><span> 2 </span>
+        </div>
+      </div>
       <div class="popup-body">
         <ul class="popup-body-list">
           <li>
