--- a/options.html
+++ b/options.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-        margin: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="./options.css" />
   </head>
   <body>
     <div id="buttonDiv"></div>
