--- a/options.html
+++ b/options.html
@@ -4,9 +4,15 @@
     <link rel="stylesheet" href="./options.css" />
   </head>
   <body>
-    <div id="buttonDiv"></div>
-    <div>
-      <p>Choose a different background color!</p>
+    <!-- <div id="buttonDiv"></div> -->
+    <div class="options-main-container">
+      <!-- <p>Choose a different background color!</p> -->
+
+      <div class="options-sub-container">
+        <div id="private-tabs">
+          <p></p>
+        </div>
+      </div>
     </div>
   </body>
   <script src="options.js"></script>
