add the plugin for chrome

--- a/pages/suspendedpage.html
+++ b/pages/suspendedpage.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./suspendedpage.css" />
-    <title>Document Suspend html</title>
+    <title>Tab Securer Suspended</title>
   </head>
   <body>
     <div class="suspended-html-container">
+      <img class="brand-icon" src="../images/apple-touch-icon-152x152.png" />
+
       <h2 class="title">URLSearchParams - Web APIs | MDN</h2>
 
       <a class="page-url">https://developers.chrome.com/extensions/windows</a>
@@ -19,6 +21,19 @@
       />
       <button id="click-me">Show Tab</button>
     </div>
+    <!-- <script
+      type="text/javascript"
+      src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+      data-name="bmc-button"
+      data-slug="simbathesailor"
+      data-color="#de7474"
+      data-emoji=""
+      data-font="Cookie"
+      data-text="Buy me a drink"
+      data-outline-color="#000"
+      data-font-color="#fff"
+      data-coffee-color="#fd0"
+    ></script> -->
     <!-- <div id="click-me">Click to reload the page again</div> -->
     <script src="suspendedpage.js"></script>
   </body>
