add the plugin for chrome

--- a/pages/suspendedpage.html
+++ b/pages/suspendedpage.html
@@ -14,11 +14,16 @@
 
       <a class="page-url">https://developers.chrome.com/extensions/windows</a>
 
-      <img
+      <!-- <img
         class="giphy"
         src="https://media.giphy.com/media/wpoLqr5FT1sY0/giphy.gif"
         alt=""
-      />
+      /> -->
+      <div class="box-message">
+        <span>Save</span>
+        <span>Your</span>
+        <span>Privacy</span>
+      </div>
       <button id="click-me">Show Tab</button>
     </div>
     <!-- <script
